refactor : 전체 Topic에 대한 사용자 구독 상태 조회 API DTO 수정